examples/ast-html/src/tests/corpus/snapshots/python_html__tests__corpus__all_caps_doctype@name.snap
---
source: src/tests/corpus/mod.rs
expression: document
---
Document {
    children: [
        Doctype(
            Doctype {
                [RANGE]
            },
        ),
    ],
    [RANGE]
}
