examples/ast-html/src/tests/corpus/snapshots/python_html__tests__corpus__custom_tags@name.snap
---
source: src/tests/corpus/mod.rs
expression: document
---
Document {
    children: [
        Element(
            Element {
                children: [
                    StartTag(
                        StartTag {
                            children: [
                                TagName(
                                    TagName {
                                        [RANGE]
                                    },
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    Element(
                        Element {
                            children: [
                                StartTag(
                                    StartTag {
                                        children: [
                                            TagName(
                                                TagName {
                                                    [RANGE]
                                                },
                                            ),
                                            Attribute(
                                                Attribute {
                                                    children: [
                                                        AttributeName(
                                                            AttributeName {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                Text(
                                    Text {
                                        [RANGE]
                                    },
                                ),
                                EndTag(
                                    EndTag {
                                        children: TagName {
                                            [RANGE]
                                        },
                                        [RANGE]
                                    },
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    EndTag(
                        EndTag {
                            children: TagName {
                                [RANGE]
                            },
                            [RANGE]
                        },
                    ),
                ],
                [RANGE]
            },
        ),
    ],
    [RANGE]
}
