examples/ast-html/src/tests/corpus/snapshots/python_html__tests__corpus__li_elements_without_close_tags@name.snap
---
source: src/tests/corpus/mod.rs
expression: document
---
Document {
    children: [
        Element(
            Element {
                children: [
                    StartTag(
                        StartTag {
                            children: [
                                TagName(
                                    TagName {
                                        [RANGE]
                                    },
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    Element(
                        Element {
                            children: [
                                StartTag(
                                    StartTag {
                                        children: [
                                            TagName(
                                                TagName {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                Text(
                                    Text {
                                        [RANGE]
                                    },
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    Element(
                        Element {
                            children: [
                                StartTag(
                                    StartTag {
                                        children: [
                                            TagName(
                                                TagName {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                Text(
                                    Text {
                                        [RANGE]
                                    },
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    EndTag(
                        EndTag {
                            children: TagName {
                                [RANGE]
                            },
                            [RANGE]
                        },
                    ),
                ],
                [RANGE]
            },
        ),
    ],
    [RANGE]
}
