examples/ast-html/src/tests/corpus/snapshots/python_html__tests__corpus__named_entities_in_tag_content@name.snap
---
source: src/tests/corpus/mod.rs
expression: document
---
Document {
    children: [
        Element(
            Element {
                children: [
                    StartTag(
                        StartTag {
                            children: [
                                TagName(
                                    TagName {
                                        [RANGE]
                                    },
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    Text(
                        Text {
                            [RANGE]
                        },
                    ),
                    Entity(
                        Entity {
                            [RANGE]
                        },
                    ),
                    Text(
                        Text {
                            [RANGE]
                        },
                    ),
                    Entity(
                        Entity {
                            [RANGE]
                        },
                    ),
                    Text(
                        Text {
                            [RANGE]
                        },
                    ),
                    EndTag(
                        EndTag {
                            children: TagName {
                                [RANGE]
                            },
                            [RANGE]
                        },
                    ),
                ],
                [RANGE]
            },
        ),
    ],
    [RANGE]
}
