examples/ast-html/src/tests/corpus/snapshots/python_html__tests__corpus__tags_with_attributes@name.snap
---
source: src/tests/corpus/mod.rs
expression: document
---
Document {
    children: [
        Element(
            Element {
                children: [
                    StartTag(
                        StartTag {
                            children: [
                                TagName(
                                    TagName {
                                        [RANGE]
                                    },
                                ),
                                Attribute(
                                    Attribute {
                                        children: [
                                            AttributeName(
                                                AttributeName {
                                                    [RANGE]
                                                },
                                            ),
                                            AttributeValue(
                                                AttributeValue {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                Attribute(
                                    Attribute {
                                        children: [
                                            AttributeName(
                                                AttributeName {
                                                    [RANGE]
                                                },
                                            ),
                                            QuotedAttributeValue(
                                                QuotedAttributeValue {
                                                    children: Some(
                                                        AttributeValue {
                                                            [RANGE]
                                                        },
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                Attribute(
                                    Attribute {
                                        children: [
                                            AttributeName(
                                                AttributeName {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    EndTag(
                        EndTag {
                            children: TagName {
                                [RANGE]
                            },
                            [RANGE]
                        },
                    ),
                ],
                [RANGE]
            },
        ),
    ],
    [RANGE]
}
